Funcionalidade de login e autenticações, inclusão de JWT e Spring Security